fix overflow issue

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -23,6 +23,7 @@ code::before {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .InfoSection {
